fix: class rs logo del justify add align

--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ a {
   /* height: 100vh; */
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
+  align-items: center;
+  /* justify-content: center; */
 }
 .rs-school-logo {
   display: block;
